--- a/index.html
+++ b/index.html
@@ -1,58 +1,80 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta property="og:title" content="𝚂†𝚇 𝙺†𝙻𝙻𝙴𝚁𝚂">
-    <meta property="og:description" content="Sasal?">
-    <link rel="icon" type="image/ico" href="media/icon.ico">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>𝚂†𝚇 𝙺†𝙻𝙻𝙴𝚁𝚂</title>
-    <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>деза — био</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
+    body {
+      margin: 0;
+      font-family: 'Roboto Mono', monospace;
+      background-color: #121212;
+      color: #e0e0e0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    .card {
+      background: #1e1e1e;
+      border: 1px solid #333;
+      border-radius: 16px;
+      box-shadow: 0 0 20px rgba(0,255,180,0.15);
+      padding: 30px 40px;
+      max-width: 500px;
+      width: 90%;
+    }
+
+    .card h1 {
+      color: #00ffc3;
+      margin-bottom: 20px;
+      font-size: 1.8rem;
+    }
+
+    .info {
+      margin-bottom: 20px;
+    }
+
+    .info p {
+      margin: 8px 0;
+    }
+
+    a {
+      color: #03dac6;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .footer {
+      font-size: 0.9rem;
+      color: #aaa;
+      margin-top: 30px;
+      border-top: 1px solid #333;
+      padding-top: 10px;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-    <div class="background-video">
-        <video autoplay loop muted>
-        </video>
+  <div class="card">
+    <h1>📁 Профиль: деза</h1>
+    <div class="info">
+      <p><strong>Телефон:</strong> +380970176014</p>
+      <p><strong>IP-адрес:</strong> 34.205.52.49</p>
+      <p><strong>VPN:</strong> Avira Phantom Pro</p>
+      <p><strong>Связь:</strong> <a href="https://t.me/owndeza" target="_blank">Telegram — @owndeza</a></p>
     </div>
-    <div class="container">
-		<div class="content-wrapper">
-			<div class="left-content">
-				<div class="rectangle">
-					<div class="content">
-						<a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley' target='_blank'>
-							<img class='avatar' src="media/ava.png" alt='Avatar'>
-						</a>
-						<h1 class="nickname">𝚂†𝚇 𝙺†𝙻𝙻𝙴𝚁𝚂</h1>
-						<div class="social-links social-links-rectangle">
-							<a href="https://github.com/dxpt-offical" target="_blank">
-								<img src="icons/github.svg" alt="Github">
-							</a>
-							<a href="https://t.me/SEX_KILLS" target="_blank">
-								<img src="icons/telegram.svg" alt="Telegram">
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="spotifyplayer">
-					<a href="https://github.com/dxpt-offical" class="spotifynow">
-					  <img src="https://spotify-8p69aysnt-tsprnay.vercel.app/api?theme=dark&scan=true&rainbow=true" alt="Current Spotify Song">
-					</a>
-				</div>
-			</div>
-			<div class="right-content">
-				<div class="rectangle-right">
-					<h1 class="hithere">Никогда не пакости</h1>
-					<p class="nometa">человеку тебе еще прийдется к нему прийти на помощь.</p>
-					<video autoplay loop muted class="ayanami">
-						<source src="media/ayanami.mp4" type="video/mp4">
-					</video>
-				</div>
-				<div id="expand-button" class="rectangle-button">
-					<img class="arrow" src="icons/arrow.svg" alt="Expand">
-				</div>
-			</div>
-		</div>
-	</div>
-    <script src="js/script.js"></script>
+    <div class="info">
+      <p>🛠 <strong>Доп. информация:</strong></p>
+      <p>C# разработчик, не создаю вреда. Работаю чисто, профессионально и с уважением к другим.</p>
+    </div>
+    <div class="footer">deza.bio • GitHub Pages</div>
+  </div>
 </body>
 </html>
