--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
       <p><strong>VPN:</strong> Avira Phantom Pro</p>
       <p><strong>Адрес:</strong> 20700 Ashburn Station Pl, Ashburn, VA 20147</p>
       <p><strong>Связь:</strong> <a href="https://t.me/owndeza" target="_blank">Telegram — @owndeza</a></p>
+      <p><strong>Мой ТГК:</strong> <a href="https://t.me/nikasosalamyxyi" target="_blank">Telegram — где то в сервере</a></p>
     </div>
     <div class="info">
       <p>🛠 <strong>Доп. информация:</strong></p>
