--- a/index.html
+++ b/index.html
@@ -1,114 +1,131 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>деза — био</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>patchman — BIO</title>
+  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
-
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      cursor: url('https://cur.cursors-4u.net/cursors/cur-13/cur1155.cur'), auto;
     }
 
     body {
-      font-family: 'Roboto Mono', monospace;
-      background: radial-gradient(circle at center, #1a001f 0%, #0d0014 100%);
-      color: #e0d6ff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      min-height: 100vh;
-      overflow-x: hidden;
+      font-family: 'Share Tech Mono', monospace;
+      background: radial-gradient(circle at center, #0f0f0f 20%, #000 100%);
+      color: #00ffcc;
+      overflow: hidden;
+      height: 100vh;
+      position: relative;
     }
 
-    img.blackhole {
-      max-width: 100%;
-      width: 400px;
-      margin-bottom: 30px;
-      border-radius: 16px;
-      box-shadow: 0 0 40px rgba(183, 0, 255, 0.6);
-      animation: float 6s ease-in-out infinite;
-    }
-
-    @keyframes float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-    }
-
-    .card {
-      background: #1a0026;
-      border: 1px solid #3c0066;
+    .glass {
+      backdrop-filter: blur(10px);
+      background: rgba(0, 0, 0, 0.3);
+      border: 1px solid #00ffcc55;
       border-radius: 20px;
-      box-shadow: 0 0 25px rgba(200, 100, 255, 0.3);
-      padding: 30px 40px;
-      max-width: 550px;
+      padding: 2rem;
       width: 90%;
-      animation: fadeIn 1.2s ease forwards;
+      max-width: 700px;
+      margin: 5% auto;
+      box-shadow: 0 0 30px #00ffcc66;
+      animation: fadeIn 2s ease-in-out;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+      color: #00ffff;
+      text-shadow: 0 0 5px #00ffff;
     }
 
-    .card h1 {
-      color: #d87eff;
-      margin-bottom: 20px;
-      font-size: 2rem;
-      text-shadow: 0 0 8px #b14cff;
-    }
-
-    .info p {
+    .info-line {
       margin: 10px 0;
-      font-size: 1rem;
+      font-size: 1.1rem;
+      opacity: 0;
+      animation: typeIn 0.5s ease forwards;
+    }
+
+    .info-line:nth-child(n+2) {
+      animation-delay: calc(0.3s * var(--i));
     }
 
     a {
-      color: #c084fc;
+      color: #00ffff;
       text-decoration: none;
     }
 
     a:hover {
-      text-shadow: 0 0 5px #b14cff;
       text-decoration: underline;
     }
 
     .footer {
-      font-size: 0.85rem;
-      color: #a088b8;
-      margin-top: 30px;
-      border-top: 1px solid #3c0066;
-      padding-top: 10px;
-      text-align: center;
+      margin-top: 2rem;
+      font-size: 0.9rem;
+      color: #cccccc88;
+    }
+
+    /* Background scanlines effect */
+    .scanlines::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: repeating-linear-gradient(
+        to bottom,
+        rgba(0, 255, 204, 0.03),
+        rgba(0, 255, 204, 0.03) 1px,
+        transparent 1px,
+        transparent 2px
+      );
+      pointer-events: none;
+      z-index: 1;
+      animation: flicker 3s infinite;
+    }
+
+    @keyframes flicker {
+      0%, 100% { opacity: 0.2; }
+      50% { opacity: 0.4; }
+    }
+
+    @keyframes fadeIn {
+      0% { opacity: 0; transform: translateY(-20px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes typeIn {
+      from { opacity: 0; transform: translateX(-20px); }
+      to { opacity: 1; transform: translateX(0); }
+    }
+
+    /* Cursor blinking effect */
+    .cursor::after {
+      content: '_';
+      animation: blink 1s step-start infinite;
+    }
+
+    @keyframes blink {
+      50% { opacity: 0; }
     }
   </style>
 </head>
-<body>
-
-  <!-- Изображение чёрной дыры -->
-  <img src="https://i.pinimg.com/736x/19/ef/9e/19ef9e7017eb4cf18419ac7719e3f2ee.jpg" alt="Черная дыра" class="blackhole">
-
-  <div class="card">
-    <h1>🧬 BIO</h1>
-    <div class="info">
-      <p><strong>Нейм:</strong> деза</p>
-      <p><strong>Телефон:</strong> +380970176014</p>
-      <p><strong>IP-адрес:</strong> 34.205.52.49</p>
-      <p><strong>VPN:</strong> Avira Phantom Pro</p>
-      <p><strong>Адрес:</strong> 20700 Ashburn Station Pl, Ashburn, VA 20147</p>
-      <p><strong>Связь:</strong> <a href="https://t.me/owndeza" target="_blank">Telegram — @owndeza</a></p>
-      <p><strong>Мой ТГК:</strong> <a href="https://t.me/nikasosalamyxyi" target="_blank">Telegram — где то в сервере</a></p>
-    </div>
-    <div class="info">
-      <p>🛠 <strong>Доп. информация:</strong></p>
-      <p>C# разработчик, не создаю вреда. Работаю чисто, профессионально и с уважением к другим.</p>
-    </div>
-    <div class="footer">deza.bio</div>
+<body class="scanlines">
+  <div class="glass">
+    <h1 class="cursor">patchman</h1>
+    <div class="info-line" style="--i:1">📞 Телефон: <a href="tel:+380970176014">+380970176014</a></div>
+    <div class="info-line" style="--i:2">🌐 IP-адрес: 34.205.52.49</div>
+    <div class="info-line" style="--i:3">🛡 VPN: Avira Phantom Pro</div>
+    <div class="info-line" style="--i:4">📍 Адрес: 20700 Ashburn Station Pl, Ashburn, VA 20147</div>
+    <div class="info-line" style="--i:5">💬 Связь: <a href="https://t.me/ownpatch" target="_blank">@ownpatch</a></div>
+    <div class="info-line" style="--i:6">🔗 Мой ТГК: Telegram — где-то в сервере</div>
+    <div class="info-line" style="--i:7">🛠 Доп. информация:</div>
+    <div class="info-line" style="--i:8">C# разработчик, не создаю вреда.</div>
+    <div class="info-line" style="--i:9">Работаю чисто, профессионально и с уважением к другим.</div>
+    <div class="footer">Last update: 2025</div>
   </div>
 </body>
 </html>
