--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>patchman — BIO</title>
+  <title>deza — BIO</title>
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
   <style>
     * {
@@ -119,8 +119,8 @@
     <div class="info-line" style="--i:1">📞 Телефон: <a href="tel:+380970176014">+380970176014</a></div>
     <div class="info-line" style="--i:2">🌐 IP-адрес: 34.205.52.49</div>
     <div class="info-line" style="--i:3">🛡 VPN: Avira Phantom Pro</div>
-    <div class="info-line" style="--i:4">📍 Адрес: 20700 Ashburn Station Pl, Ashburn, VA 20147</div>
-    <div class="info-line" style="--i:5">💬 Связь: <a href="https://t.me/ownpatch" target="_blank">@ownpatch</a></div>
+    <div class="info-line" style="--i:4">📍 Адрес: 9404 Vintner Cir, Patterson, CA 95363, Сполученые Штаты Америки</div>
+    <div class="info-line" style="--i:5">💬 Связь: <a href="https://t.me/ownpatch" target="_blank">@owndeza</a></div>
     <div class="info-line" style="--i:6">🔗 Мой ТГК: Telegram — где-то в сервере</div>
     <div class="info-line" style="--i:7">🛠 Доп. информация:</div>
     <div class="info-line" style="--i:8">C# разработчик, не создаю вреда.</div>
