--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 </head>
 <body class="scanlines">
   <div class="glass">
-    <h1 class="cursor">patchman</h1>
+    <h1 class="cursor">deza</h1>
     <div class="info-line" style="--i:1">📞 Телефон: <a href="tel:+380970176014">+380970176014</a></div>
     <div class="info-line" style="--i:2">🌐 IP-адрес: 34.205.52.49</div>
     <div class="info-line" style="--i:3">🛡 VPN: Avira Phantom Pro</div>
