--- a/index.html
+++ b/index.html
@@ -2,137 +2,90 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>deza — BIO</title>
-  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>BIO</title>
+
+  <!-- Tailwind CDN (разработка; для продакшена используйте сборку через PostCSS) -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Font Awesome 6.5 (иконки) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-wGNbX7x7tfq+p+zv0x6sPSWKeZKQQ4M1pNIGRrMFxRpVusfQzAoyEV9aHc6d3x3CDRohmHcWgu2txlDc+J6H1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+    html { scroll-behavior: smooth; }
     body {
-      font-family: 'Share Tech Mono', monospace;
-      background: radial-gradient(circle at center, #0f0f0f 20%, #000 100%);
-      color: #00ffcc;
-      overflow: hidden;
-      height: 100vh;
-      position: relative;
+      font-family: 'Inter', sans-serif;
+      background: #121212;
+      color: #e0e0e0;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
     }
-
-    .glass {
-      backdrop-filter: blur(10px);
-      background: rgba(0, 0, 0, 0.3);
-      border: 1px solid #00ffcc55;
-      border-radius: 20px;
-      padding: 2rem;
-      width: 90%;
-      max-width: 700px;
-      margin: 5% auto;
-      box-shadow: 0 0 30px #00ffcc66;
-      animation: fadeIn 2s ease-in-out;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-      color: #00ffff;
-      text-shadow: 0 0 5px #00ffff;
-    }
-
-    .info-line {
-      margin: 10px 0;
-      font-size: 1.1rem;
+    .fade-in {
       opacity: 0;
-      animation: typeIn 0.5s ease forwards;
+      transform: translateY(20px);
+      animation: fadeInUp 0.8s forwards;
     }
-
-    .info-line:nth-child(n+2) {
-      animation-delay: calc(0.3s * var(--i));
+    .fade-in.delay-1 { animation-delay: 0.2s; }
+    .fade-in.delay-2 { animation-delay: 0.4s; }
+    .fade-in.delay-3 { animation-delay: 0.6s; }
+    @keyframes fadeInUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
-
-    a {
-      color: #00ffff;
-      text-decoration: none;
+    .btn-primary {
+      @apply bg-gradient-to-r from-purple-600 via-pink-600 to-red-600 text-white font-semibold rounded-lg shadow-lg hover:brightness-110 transition;
     }
-
-    a:hover {
-      text-decoration: underline;
+    .info-box {
+      @apply bg-[#1e1e1e] rounded-xl p-6 shadow-lg border border-pink-600 text-left;
     }
-
-    .footer {
-      margin-top: 2rem;
-      font-size: 0.9rem;
-      color: #cccccc88;
+    .tag {
+      @apply inline-block bg-pink-600 text-white text-xs font-medium px-3 py-1 rounded-full mr-2 mb-2;
     }
-
-    /* Background scanlines effect */
-    .scanlines::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background: repeating-linear-gradient(
-        to bottom,
-        rgba(0, 255, 204, 0.03),
-        rgba(0, 255, 204, 0.03) 1px,
-        transparent 1px,
-        transparent 2px
-      );
-      pointer-events: none;
-      z-index: 1;
-      animation: flicker 3s infinite;
+    .icon {
+      @apply text-pink-500 mr-2 w-5 h-5 inline-block;
     }
-
-    @keyframes flicker {
-      0%, 100% { opacity: 0.2; }
-      50% { opacity: 0.4; }
-    }
-
-    @keyframes fadeIn {
-      0% { opacity: 0; transform: translateY(-20px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes typeIn {
-      from { opacity: 0; transform: translateX(-20px); }
-      to { opacity: 1; transform: translateX(0); }
-    }
-
-    /* Cursor blinking effect */
-    .cursor::after {
-      content: '_';
-      animation: blink 1s step-start infinite;
-    }
-
-    @keyframes blink {
-      50% { opacity: 0; }
-    }
-
-    .dimmed-text {
-  color: rgba(255, 255, 255, 0.4); /* светло-серый, прозрачный */
-  user-select: none;               /* чтобы текст не выделялся */
-  font-weight: 600;
-  font-size: 0.9em;
-}
   </style>
 </head>
-<body class="scanlines">
-  <div class="glass">
-    <h1 class="cursor">deza</h1>
-    <div class="info-line" style="--i:1">📞 Телефон: <a href="tel:+380970176014">+380970176014</a></div>
-    <div class="info-line" style="--i:2">🌐 IP-адрес: 34.205.52.49</div>
-    <div class="info-line" style="--i:3">🛡 VPN: Avira Phantom Pro</div>
-    <div class="info-line" style="--i:4">📍 Адрес: 9404 Vintner Cir, Patterson, CA 95363, Сполученые Штаты Америки</div>
-    <div class="info-line" style="--i:5">💬 Связь: <a href="https://t.me/ownpatch" target="_blank">@owndeza</a></div>
-    <div class="info-line" style="--i:6">🔗 Мой ТГК: Telegram — где-то в сервере</div>
-    <div class="info-line" style="--i:7">🛠 Доп. информация:</div>
-    <div class="info-line" style="--i:8">C# разработчик, не создаю вреда.</div>
-    <div class="info-line" style="--i:9">Работаю чисто, профессионально и с уважением к другим.</div>
-    <div class="footer">Last update: 2025 <p class="dimmed-text">#1</p></div>
-  </div>
+<body class="min-h-screen flex flex-col items-center justify-center px-6 py-12 text-center">
+
+  <main class="max-w-2xl w-full space-y-8">
+    <h1 class="text-5xl font-extrabold leading-tight bg-gradient-to-r from-purple-400 to-pink-600 bg-clip-text text-transparent select-none fade-in delay-1">
+      deza — C# разработчик
+    </h1>
+
+    <div class="info-box fade-in delay-2 text-sm sm:text-base space-y-3">
+      <p><i class="fas fa-phone icon"></i><strong>Телефон:</strong> +380970176014</p>
+      <p><i class="fas fa-globe icon"></i><strong>IP-адрес:</strong> 34.205.52.49</p>
+      <p><i class="fas fa-shield-halved icon"></i><strong>VPN:</strong> Avira Phantom Pro</p>
+      <p><i class="fas fa-location-dot icon"></i><strong>Адрес:</strong> 9404 Vintner Cir, Patterson, CA 95363, США</p>
+      <p><i class="fab fa-telegram icon"></i><strong>Связь:</strong> <a href="https://t.me/owndeza" class="text-pink-500 hover:underline">@owndeza</a></p>
+      <p><i class="fas fa-layer-group icon"></i><strong>Каста:</strong> Кодер</p>
+    </div>
+
+    <div class="info-box fade-in delay-3">
+      <h2 class="text-xl font-semibold text-pink-500 mb-3"><i class="fas fa-wrench icon"></i>Доп. информация</h2>
+      <p>
+        C# разработчик, не создаю вреда. <br/>
+        Работаю чисто, профессионально и с уважением к другим.
+      </p>
+    </div>
+
+    <div class="flex flex-wrap gap-4 justify-center fade-in delay-3">
+      <a href="https://t.me/owndeza" target="_blank" class="btn-primary px-6 py-3">
+        <i class="fab fa-telegram-plane mr-2"></i>Связаться в Telegram
+      </a>
+      <a href="mailto:deza@example.com" class="btn-primary px-6 py-3">
+        <i class="fas fa-envelope mr-2"></i>Написать на почту
+      </a>
+    </div>
+  </main>
+
+  <footer class="mt-16 text-sm text-gray-500 select-none fade-in delay-3">
+    © 2025 deza. Deox Development Studio. #1
+  </footer>
+
 </body>
 </html>
