--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
     </div>
 
     <div class="flex flex-wrap gap-4 justify-center fade-in delay-3">
-      <a href="https://t.me/owndeza" target="_blank" class="btn-primary px-6 py-3">
+      <a href="https://t.me/killdeza" target="_blank" class="btn-primary px-6 py-3">
         <i class="fab fa-telegram-plane mr-2"></i>Связаться в Telegram
       </a>
-      <a href="mailto:deza@example.com" class="btn-primary px-6 py-3">
+      <a href="mailto:dezaoffical@gmail.com" class="btn-primary px-6 py-3">
         <i class="fas fa-envelope mr-2"></i>Написать на почту
       </a>
     </div>
