--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     
     <div class="container">
         <div class="avatar">
-            deza.jpg
+            <img src="deza.jpg" alt="деза" />
         </div>
         
         <h1 class="username">деза</h1>
@@ -367,3 +367,4 @@
     </script>
 </body>
 </html>
+
