--- a/index.html
+++ b/index.html
@@ -277,19 +277,19 @@
         </p>
         
         <div class="links">
-            <a href="https://t.me/your_username" target="_blank" class="link" data-action="link">
+            <a href="https://t.me/fuckdeza" target="_blank" class="link" data-action="link">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
                 </svg>
                 telegram
             </a>
-            <a href="https://t.me/your_username" target="_blank" class="link" data-action="link">
+            <a href="https://github.com/owndeza" target="_blank" class="link" data-action="link">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
                 </svg>
                 github
             </a>
-            <a href="https://t.me/your_username" target="_blank" class="link" data-action="link">
+            <a href="https://steamcommunity.com/profiles/76561199586374309/" target="_blank" class="link" data-action="link">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
                 </svg>
@@ -367,4 +367,5 @@
     </script>
 </body>
 </html>
+
 
